hello_Nios2FreeRTOS/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:05:39 **** Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
[nios2_freertos build complete]
12:07:04 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../nios2_freertos_bsp//HAL/inc -I../nios2_freertos_bsp/ -I../nios2_freertos_bsp//drivers/inc -I./ -IFreeRTOS/include -IFreeRTOS/portable/GCC/NiosII  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.c
hello_world.c:31:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'void'
 void task2 (void *p){
 ^
make: *** [obj/default/hello_world.o] Error 1
12:07:06 **** Build of configuration Nios II for project nios2_freertos_bsp ****
make all 
[BSP build complete]
Command canceled
12:07:11 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../nios2_freertos_bsp//HAL/inc -I../nios2_freertos_bsp/ -I../nios2_freertos_bsp//drivers/inc -I./ -IFreeRTOS/include -IFreeRTOS/portable/GCC/NiosII  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.c
Info: Linking nios2_freertos.elf
nios2-elf-g++  -T'../nios2_freertos_bsp//linker.x' -msys-crt0='../nios2_freertos_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../nios2_freertos_bsp/   -Wl,-Map=nios2_freertos.map   -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o nios2_freertos.elf obj/default/FreeRTOS/croutine.o obj/default/FreeRTOS/event_groups.o obj/default/FreeRTOS/list.o obj/default/FreeRTOS/portable/GCC/NiosII/port.o obj/default/FreeRTOS/portable/MemMang/heap_1.o obj/default/FreeRTOS/queue.o obj/default/FreeRTOS/stream_buffer.o obj/default/FreeRTOS/tasks.o obj/default/FreeRTOS/timers.o obj/default/hello_world.o obj/default/FreeRTOS/portable/GCC/NiosII/port_asm.o -lm -msys-lib=m
nios2-elf-insert nios2_freertos.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev debug --stdin_dev debug --stdout_dev debug --sopc_system_name nios2_freertos --quartus_project_dir "C:/Users/oktay/Desktop/repo/de2115/projects/hw/tutorial_nios2_freertos" --jdi ../..//output_files/nios2_freertos.jdi --sopcinfo C:/Users/oktay/Desktop/repo/de2115/projects/hw/tutorial_nios2_freertos/software/nios2_freertos_bsp/../../nios2_freertos.sopcinfo
Info: (nios2_freertos.elf) 8248 KBytes program size (code + initialized data).
Info:                      122816 KBytes free for stack + heap.
Info: Creating nios2_freertos.objdump
nios2-elf-objdump --disassemble --syms --all-header --source nios2_freertos.elf >nios2_freertos.objdump
[nios2_freertos build complete]
12:07:15 **** Build of configuration Nios II for project nios2_freertos_bsp ****
make all 
[BSP build complete]
12:07:33 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
[nios2_freertos build complete]
12:11:48 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
[nios2_freertos build complete]
12:12:04 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
[nios2_freertos build complete]
12:12:27 **** Incremental Build of configuration Nios II for project nios2_freertos ****
make all 
Info: Building ../nios2_freertos_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios2_freertos_bsp/
[BSP build complete]
[nios2_freertos build complete]
